--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "25.0.0"
+    compileSdkVersion 32
 
     defaultConfig {
         applicationId "com.jgh.androidssh"
         minSdkVersion 15
+        //noinspection ExpiredTargetSdkVersion
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
@@ -20,9 +20,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.jcraft:jsch:0.1.51'
-    compile 'org.bouncycastle:bcprov-jdk16:1.46'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'com.jcraft:jsch:0.1.55'
+    implementation 'org.bouncycastle:bcprov-jdk16:1.46'
 
 }
