--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:allowBackup="true"
         android:icon="@drawable/sshicon"
         android:label="@string/app_name"
+        android:usesCleartextTraffic="true"
         android:theme="@style/AndroidSSH">
 
         <activity
